# PooSnakePy

./: .gitignore  README.md  pyproject.toml  setup.py  snake.py
PooSnake/: __init__.py  __main__.py  snake.py
src/poosnake/: __init__.py  game.py
